--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div id="map"></div>
     <script>
       function initMap() {
-        var kostkarunia = {lat: -7.5506986, lng: 110.7698919},
+        var kostkarunia = {lat: -7.550648, lng: 110.770442},
         var map = new google.maps.Map(document.getElementById('map'), {
           zoom: 16,
           center: kostkarunia
